# mactech-captureos

./: .env.example  .gitignore  CLAUDE.md  MASTER_PROMPT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  railway.json
apps/api/: Dockerfile  MACTECH_AUDIT_INTEGRATION.md  MACTECH_IDENTITY_INTEGRATION.md  entrypoint.sh  pyproject.toml
apps/api/scripts/: import_bid_invites_mbox.py  reparse_bid_invites.py  seed.py
apps/api/src/mactech_api/: auth.py  directory_client.py  docx_export.py  embed_helpers.py  mactech_audit_client.py  mactech_identity_client.py  mactech_profile_client.py  main.py  sbir_topics_sync.py  sbir_workspace.py  settings.py
apps/api/src/mactech_api/routes/: agency_intel.py  amendments.py  ask.py  bid_invites.py  brief.py  capture.py  capture_package.py  cyber.py  cyber_scope.py  cyber_scope_downstream.py  cyber_scope_intelligence.py  directory.py  drafts.py  eligibility.py  events.py  explain.py  forecasts.py  founders.py  integrations.py  library.py  library_import.py  me.py  onboarding.py  opportunities.py  past_performance.py  pursuit_links.py  pursuits.py  sbir.py  search.py  settings.py  solicitation.py  teaming_partners.py  web_mentions.py  webhooks.py
apps/api/src/mactech_api/services/: founder_profile_sync.py
apps/api/tests/: test_bid_invite_unseen.py  test_directory_client.py  test_founder_profile_sync.py  test_healthz.py  test_ingest_status.py  test_postmark_inbound.py  test_sbir_routes_smoke.py  test_sbir_workspace.py
apps/workers/: Dockerfile  entrypoint.sh  pyproject.toml  railway.json
apps/workers/src/mactech_workers/: celery_app.py
apps/workers/src/mactech_workers/documents/: __init__.py  archive.py  classify.py  extract.py  sections.py  store.py
apps/workers/src/mactech_workers/tasks/: apify_dsip_lookup.py  apify_forecasts.py  apify_industry_days.py  apify_sbir_topics.py  attachment_fetcher.py  codex_sprs_sync.py  cyber_scope_sam_search.py  cyber_scope_scan.py  cyber_scope_summarize.py  decision.py  dhs_apfs_ingest.py  digest.py  doe_forecast_ingest.py  dsip_ingest.py  edgar_signals.py  embed.py  enrich.py  library_import.py  nasa_naf_ingest.py  prime_targets.py  pursuit_plan.py  sam_descriptions.py  (+4 more)
apps/workers/tests/: test_digest_bid_invites.py  test_documents_toolkit.py  test_sam_descriptions.py
(+172 files in other folders)
