[project]
name = "mactech-api"
version = "0.1.0"
description = "FastAPI surface for MacTech CaptureOS."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "mactech-db",
]

[tool.uv.sources]
mactech-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mactech_api"]

[tool.hatch.metadata]
allow-direct-references = true
